newclay/test/Compiler/Propagation/Fail/GlobalInitializerTypeDoesNotMatchDeclaredType/main.clay
var x:Int = 1.0;

main() = x;
